# linkHQ

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  SESSION_HANDOFF.md  docker-compose.yml  fly.toml  plan.md  render.yaml
backend/: .env.example  CLAUDE.md  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2c3e7d95e6bc_users_courses_class_sessions.py  a1f7c3e9b2d4_organizations_memberships.py  b8e3d6f1c742_attendance_tables.py  c1f4a8b2e5d7_add_session_ended_at.py  d2a9f6c3b1e8_session_presence.py  rec0watch7m7a_recording_watch_tracking.py
backend/app/: main.py
backend/app/api/: admin.py  assignments.py  auth.py  live.py  recordings.py  sessions.py  webhooks.py
backend/app/auth/: deps.py  security.py  tokens.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attendance.py  base.py  course.py  org.py  user.py
backend/app/realtime/: server.py
backend/app/schemas/: assignment.py  auth.py  org.py  recording.py  session.py
backend/scripts/: seed.py  set_meeting.py  set_role.py
backend/tests/: conftest.py  test_admin_attendance.py  test_admin_sessions.py  test_ai_chat.py  test_assignment_upload.py  test_attendance.py  test_auth.py  test_cors_config.py  test_email_notifications.py  test_live_join.py  test_llm.py  test_orgs.py  test_recording_api.py  test_recording_ingest.py  test_seed_idempotency.py  test_session_lifecycle.py  test_session_presence.py  test_sessions.py  test_smoke.py  test_sync_attendance.py  test_webhooks.py
(+112 files in other folders)
